[TEST] Review controller test